k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authapi
  template:
    metadata:
      labels:
        app: authapi
    spec:
      containers:
        - name: authapi
          image: sugaprivate/authprod:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: authapi-service
spec:
  type: ClusterIP
  selector:
    app: authapi
  ports:
    - port: 9000
      targetPort: 9000
