k8s/db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqldb-statefulset
spec:
  serviceName: mysqldb-service
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: sugaprivate/mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: db-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-service
spec:
  clusterIP: None
  selector:
    app: mysqldb
  ports:
    - port: 3306
      targetPort: 3306
